# tank90-FE

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  math.cpp  math.h
Data/MapData/: map.csv
Source/: SingletonTemplate.h  appconfig.cpp  main.cpp  room_manager.cpp  room_manager.h  server.cpp
Source/ECS/Component/: Component.h
Source/ECS/Entity/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
Source/ECS/System/: System.cpp  System.h  SystemManager.cpp  SystemManager.h
Source/Game/: LoadResourceManager.cpp  LoadResourceManager.h
Source/Game/Common/: ActionStatePacket.h  ColliderLayer.h  Event.cpp  Event.h  Packet.h  TankStatePacket.h  Time.cpp
Source/Game/Components/: ControlComponent.cpp  ControlComponent.h  Cursor.cpp  Cursor.h  Effect.cpp  FlyComponent.h  Footprint.cpp  NetworkReceiver.cpp  NetworkReceiver.h  NetworkTracking.cpp  NetworkTracking.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
Source/Game/Entities/: Brick.cpp  Brick.h  Bullet.cpp  Bullet.h  CollideExplosion.h  GameObject.h  Mouse.cpp  Mouse.h  Smoke.cpp  SpawnPoint.cpp  Tank.cpp  Tank.h  Tree.cpp  Wall.h
Source/Game/Feature/: BeDestroy.cpp  BeDestroy.h
Source/Game/Manager/: LoadResourceManager.cpp  LoadResourceManager.h  SoundManager.cpp  SoundManager.h  UIManager.cpp  UIManager.h
Source/Game/Services/: GameplayService.cpp  GameplayService.h
Source/Game/Systems/: ClickableSystem.cpp  ControlSystem.cpp  CursorSystem.h  DestroyCounterSystem.cpp  DestroyCounterSystem.h  EffectSystem.h  FlySystem.h  NetworkReceiverSystem.cpp  NetworkReceiverSystem.h  NetworkTrackingSystem.cpp  NetworkTrackingSystem.h  RectangleColliderSystem.cpp  SpriteSystem.cpp  SpriteSystem.h  TextSystem.cpp  TextSystem.h  TransformSystem.cpp  TransformSystem.h
Source/Game/UIs/: Button.cpp  Clickable.cpp  Clickable.h  GameplayUI.cpp  Image.cpp  Image.h  LeaderBoardUI.cpp  LeaderBoardUI.h  LoseUI.cpp  PauseUI.cpp  PauseUI.h  Text.h  UIUnit.cpp  WinUI.cpp
Source/Math/: Vector2.cpp  Vector2.h
Source/app_state/: menu.cpp  menu.h  room.cpp  room.h
Source/objects/: player.cpp  player.h  tank.cpp  tank.h
src/: app.cpp  appconfig.h
src/Data/MapData/: map.csv
src/ECS/Component/: Component.cpp  Component.h
src/ECS/Entity/: Entity.h  EntityManager.cpp  EntityManager.h
src/ECS/System/: System.cpp  System.h  SystemManager.cpp  SystemManager.h
src/Game/Common/: ColliderLayer.h  Time.h
src/Game/Components/: ControlComponent.cpp  ControlComponent.h  DestroyCounter.cpp  DestroyCounter.h  Effect.h  FlyComponent.cpp  Footprint.h  NetworkReceiver.cpp  NetworkReceiver.h  NetworkTracking.h  RectangleCollider.cpp  RectangleCollider.h  Sprite.cpp  Sprite.h
src/Game/Entities/: Bullet.cpp  CollideExplosion.cpp  GameObject.cpp  Smoke.h  SpawnPoint.cpp  SpawnPoint.h  Tank.cpp  Tree.cpp  Tree.h  Wall.cpp
src/Game/Manager/: LoadResourceManager.cpp  LoadResourceManager.h  SoundManager.h  UIManager.cpp
src/Game/Services/: GameplayService.cpp  GameplayService.h
src/Game/Systems/: ClickableSystem.cpp  ClickableSystem.h  ControlSystem.cpp  ControlSystem.h  CursorSystem.cpp  DestroyCounterSystem.cpp  EffectSystem.cpp  FlySystem.cpp  FootprintSystem.cpp  FootprintSystem.h  NetworkReceiverSystem.cpp  NetworkReceiverSystem.h  NetworkTrackingSystem.cpp  NetworkTrackingSystem.h  RectangleColliderSystem.cpp  RectangleColliderSystem.h  SpriteSystem.cpp  TransformSystem.cpp
src/Game/UIs/: Button.h  GameplayUI.h  LoseUI.h  PauseUI.cpp  Text.cpp  UIUnit.h  WinUI.h
src/Math/: Vector2.cpp  Vector2.h
src/app_state/: game.cpp  menu.cpp  menu.h  room.cpp  room.h  scores.cpp
